# aether-launcher

./: .gitignore  README.md  index.html  package-lock.json  package.json  phase3.mjs  svelte.config.js  tsconfig.json  vite.config.ts
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/download/: mod.rs
src-tauri/src/install/: commands.rs  mod.rs  vanilla.rs
src-tauri/src/instance/: commands.rs  mod.rs  store.rs
src-tauri/src/launch/: commands.rs  mod.rs  natives.rs  process.rs
src-tauri/src/minecraft/: manifest.rs  mod.rs  version.rs
src-tauri/src/runtime/: commands.rs  detect.rs  install.rs  manifest.rs  mod.rs  paths.rs  provide.rs
src/lib/components/: CreateInstanceModal.svelte  InstallProgress.svelte  InstanceCard.svelte  LoaderSelect.svelte  VersionSelect.svelte
src/lib/components/ui/: Badge.svelte  Button.svelte  Card.svelte  Dropdown.svelte  Icon.svelte  Modal.svelte  Panel.svelte  ProgressBar.svelte
src/lib/ipc/: types.ts
src/lib/layout/: Shell.svelte  Sidebar.svelte  Titlebar.svelte
src/lib/router/: routes.ts
src/lib/stores/: install.svelte.ts  instances.svelte.ts  launch.svelte.ts  router.svelte.ts  theme.svelte.ts
src/lib/styles/: global.css  tokens.css
src/lib/views/: HomeView.svelte  InstancesView.svelte  SettingsView.svelte
