[package]
name = "aether-launcher"
version = "0.1.0"
description = "El launcher de Minecraft mas moderno, rapido y elegante."
edition = "2021"
rust-version = "1.77"

[lib]
name = "aether_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
directories = "5"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"
sha1 = "0.10"
hex = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
